--- a/_sources/orionsangel/Cfg/krull.cfg
+++ b/_sources/orionsangel/Cfg/krull.cfg
@@ -3,10 +3,10 @@
 <mameconfig version="10">
     <system name="krull">
         <video>
-            <screen index="0" hstretch="0.982000" vstretch="0.956000" />
+            <screen index="0" hoffset="-0.060000" hstretch="0.668000" voffset="-0.022000" vstretch="0.660000" />
         </video>
         <counters>
-            <coins index="0" number="3" />
+            <coins index="0" number="9" />
         </counters>
     </system>
 </mameconfig>
