Adds OrionsAngel pack 36

--- a/_sources/orionsangel/Cfg/asteroid.cfg
+++ b/_sources/orionsangel/Cfg/asteroid.cfg
@@ -3,7 +3,7 @@
 <mameconfig version="10">
     <system name="asteroid">
         <video>
-            <screen index="0" hoffset="0.042000" hstretch="0.748000" vstretch="0.810000" />
+            <screen index="0" hoffset="0.018000" hstretch="0.650000" voffset="0.072000" vstretch="0.578000" />
         </video>
         <mixer>
             <channel index="0" newvol="1.996094" />
