--- a/_sources/orionsangel/Cfg/osman.cfg
+++ b/_sources/orionsangel/Cfg/osman.cfg
@@ -3,7 +3,7 @@
 <mameconfig version="10">
     <system name="osman">
         <video>
-            <screen index="0" hstretch="0.940000" vstretch="0.940000" />
+            <screen index="0" hoffset="0.012000" hstretch="0.774000" voffset="0.006000" vstretch="0.788000" />
         </video>
     </system>
 </mameconfig>
