--- a/_sources/orionsangel/Cfg/tacscan.cfg
+++ b/_sources/orionsangel/Cfg/tacscan.cfg
@@ -3,10 +3,10 @@
 <mameconfig version="10">
     <system name="tacscan">
         <video>
-            <screen index="0" hoffset="0.002000" hstretch="0.926000" vstretch="0.848000" />
+            <screen index="0" hstretch="0.740000" voffset="0.038000" vstretch="0.606000" />
         </video>
         <counters>
-            <coins index="0" number="2" />
+            <coins index="0" number="7" />
         </counters>
     </system>
 </mameconfig>
