--- a/_sources/orionsangel/Cfg/toutrun.cfg
+++ b/_sources/orionsangel/Cfg/toutrun.cfg
@@ -5,5 +5,8 @@
         <video>
             <screen index="0" hoffset="-0.004000" hstretch="0.640000" voffset="-0.028000" vstretch="0.644000" />
         </video>
+        <input>
+            <port tag=":SERVICE" type="P1_BUTTON3" mask="16" defvalue="0" value="16" />
+        </input>
     </system>
 </mameconfig>
