--- a/overlays/roms/eswat.zip.cfg
+++ b/overlays/roms/eswat.zip.cfg
@@ -1,11 +1,8 @@
-video_shader = "/opt/retropie/configs/all/retroarch/shaders/zfast_crt_curve.glslp"
-video_shader_enable = "true"
+#include "/opt/retropie/configs/all/retroarch/overlay_cfg/common_arcade_h.cfg"
 
 input_overlay = /opt/retropie/configs/all/retroarch/overlay/arcade/eswat.cfg
-input_overlay_enable = true
-input_overlay_opacity = 1.000000
-input_overlay_scale = 1.000000
 
-aspect_ratio_index = "0"
-
-video_scale_integer = true
+custom_viewport_width = "790"
+custom_viewport_height = "594"
+custom_viewport_x = "630"
+custom_viewport_y = "212"
