Adds OrionsAngel pack 37

--- a/_sources/orionsangel/Cfg/drivfrcp.cfg
+++ b/_sources/orionsangel/Cfg/drivfrcp.cfg
@@ -3,10 +3,10 @@
 <mameconfig version="10">
     <system name="drivfrcp">
         <video>
-            <screen index="0" hoffset="0.016000" hstretch="0.794000" vstretch="0.792000" />
+            <screen index="0" hoffset="0.082000" hstretch="0.664000" voffset="0.022000" vstretch="0.608000" />
         </video>
         <counters>
-            <coins index="0" number="2" />
+            <coins index="0" number="8" />
         </counters>
     </system>
 </mameconfig>
