--- a/_sources/orionsangel/Cfg/matmania.cfg
+++ b/_sources/orionsangel/Cfg/matmania.cfg
@@ -3,7 +3,16 @@
 <mameconfig version="10">
     <system name="matmania">
         <video>
-            <screen index="0" hstretch="0.828000" voffset="-0.004000" vstretch="0.774000" />
+            <screen index="0" brightness="1.010000" hstretch="0.716000" voffset="-0.018000" vstretch="0.652000" />
         </video>
+        <mixer>
+            <channel index="0" newvol="1.019531" />
+            <channel index="1" newvol="1.019531" />
+            <channel index="2" newvol="1.019531" />
+            <channel index="3" newvol="1.019531" />
+            <channel index="4" newvol="1.019531" />
+            <channel index="5" newvol="1.019531" />
+            <channel index="6" newvol="1.019531" />
+        </mixer>
     </system>
 </mameconfig>
