--- a/_sources/orionsangel/Cfg/rocnrope.cfg
+++ b/_sources/orionsangel/Cfg/rocnrope.cfg
@@ -3,10 +3,10 @@
 <mameconfig version="10">
     <system name="rocnrope">
         <video>
-            <screen index="0" hoffset="-0.002000" hstretch="0.798000" vstretch="0.780000" />
+            <screen index="0" hoffset="0.020000" hstretch="0.554000" voffset="0.002000" vstretch="0.534000" />
         </video>
         <counters>
-            <coins index="0" number="2" />
+            <coins index="0" number="4" />
         </counters>
     </system>
 </mameconfig>
