--- a/_sources/orionsangel/Cfg/smashtv.cfg
+++ b/_sources/orionsangel/Cfg/smashtv.cfg
@@ -3,7 +3,7 @@
 <mameconfig version="10">
     <system name="smashtv">
         <video>
-            <screen index="0" hstretch="0.728000" voffset="-0.008000" vstretch="0.704000" />
+            <screen index="0" hoffset="0.012000" hstretch="0.728000" voffset="-0.008000" vstretch="0.704000" />
         </video>
     </system>
 </mameconfig>
