--- a/_sources/orionsangel/Cfg/rampage2.cfg
+++ b/_sources/orionsangel/Cfg/rampage2.cfg
@@ -3,10 +3,10 @@
 <mameconfig version="10">
     <system name="rampage2">
         <video>
-            <screen index="0" hoffset="-0.018000" hstretch="0.520000" voffset="-0.130000" vstretch="0.574000" />
+            <screen index="0" hstretch="0.542000" voffset="-0.178000" vstretch="0.538000" />
         </video>
         <counters>
-            <coins index="0" number="8" />
+            <coins index="0" number="4" />
         </counters>
     </system>
 </mameconfig>
