--- a/overlays/configs/generic_neogeo_yellow_bands.cfg
+++ b/overlays/configs/generic_neogeo_yellow_bands.cfg
@@ -1,4 +1,4 @@
 overlays = 1
-overlay0_overlay = robotron.png
+overlay0_overlay = generic_neogeo_yellow_bands.png
 overlay0_full_screen = true
 overlay0_descs = 0
