--- a/overlays/roms/blaster.zip.cfg
+++ b/overlays/roms/blaster.zip.cfg
@@ -1,15 +1,8 @@
-# Config created by Floob
-# https://github.com/biscuits99/rp-video-manager
-# http://www.youtube.com/c/SmartretroCoUk-Gaming
-
-video_shader = "/opt/retropie/configs/all/retroarch/overlay/arcade-realistic/common/shaders/zfast_crt_curve.glslp"
-video_shader_enable = "true"
+#include "/opt/retropie/configs/all/retroarch/overlay/arcade-realistic/common/horizontal.cfg"
 
 input_overlay = /opt/retropie/configs/all/retroarch/overlay/arcade-realistic/blaster.cfg
-input_overlay_enable = true
-input_overlay_opacity = 1.000000
-input_overlay_scale = 1.000000
 
-aspect_ratio_index = "20"
-
-video_scale_integer = true
+custom_viewport_width = "870"
+custom_viewport_height = "640"
+custom_viewport_x = "544"
+custom_viewport_y = "200"
