--- a/overlays/roms/rampage.zip.cfg
+++ b/overlays/roms/rampage.zip.cfg
@@ -1,16 +1,8 @@
-video_shader = "/opt/retropie/configs/all/retroarch/overlay/arcade-realistic/common/shaders/zfast_crt_curve.glslp"
-video_shader_enable = "true"
+#include "/opt/retropie/configs/all/retroarch/overlay/arcade-realistic/common/horizontal.cfg"
 
 input_overlay = /opt/retropie/configs/all/retroarch/overlay/arcade-realistic/rampage.cfg
-input_overlay_enable = true
-input_overlay_opacity = 1.000000
-input_overlay_scale = 1.000000
 
-custom_viewport_width = "920"
-custom_viewport_height = "690"
-custom_viewport_x = "500"
-custom_viewport_y = "65"
-
-aspect_ratio_index = "22"
-
-video_scale_integer = false
+custom_viewport_width = "716"
+custom_viewport_height = "562"
+custom_viewport_x = "602"
+custom_viewport_y = "180"
