--- a/overlays/roms/robotron.zip.cfg
+++ b/overlays/roms/robotron.zip.cfg
@@ -1,11 +1,8 @@
-video_shader = "/opt/retropie/configs/all/retroarch/overlay/arcade-realistic/common/shaders/zfast_crt_curve.glslp"
-video_shader_enable = "true"
+#include "/opt/retropie/configs/all/retroarch/overlay/arcade-realistic/common/horizontal.cfg"
 
 input_overlay = /opt/retropie/configs/all/retroarch/overlay/arcade-realistic/robotron.cfg
-input_overlay_enable = true
-input_overlay_opacity = 1.000000
-input_overlay_scale = 1.000000
 
-aspect_ratio_index = "20"
-
-video_scale_integer = true
+custom_viewport_width = "836"
+custom_viewport_height = "622"
+custom_viewport_x = "562"
+custom_viewport_y = "232"
