Adds OrionsAngel pack 38

--- a/_sources/orionsangel/Cfg/dkong3.cfg
+++ b/_sources/orionsangel/Cfg/dkong3.cfg
@@ -3,10 +3,11 @@
 <mameconfig version="10">
     <system name="dkong3">
         <video>
-            <screen index="0" contrast="1.650000" gamma="1.600000" hoffset="-0.018000" hstretch="0.720000" voffset="0.008000" vstretch="0.734000" />
+            <target index="0" view="No Monitor Screen (alt1)" />
+            <screen index="0" contrast="1.650000" gamma="1.600000" hoffset="-0.014000" hstretch="0.720000" voffset="0.008000" vstretch="0.734000" />
         </video>
         <counters>
-            <coins index="0" number="25" />
+            <coins index="0" number="27" />
         </counters>
     </system>
 </mameconfig>
