--- a/_sources/orionsangel/Cfg/dkongjrj.cfg
+++ b/_sources/orionsangel/Cfg/dkongjrj.cfg
@@ -3,10 +3,11 @@
 <mameconfig version="10">
     <system name="dkongjrj">
         <video>
-            <screen index="0" hoffset="0.006000" hstretch="0.714000" vstretch="0.740000" />
+            <target index="0" view="No Monitor Screen (alt1)" />
+            <screen index="0" hoffset="0.006000" hstretch="0.712000" vstretch="0.740000" />
         </video>
         <counters>
-            <coins index="0" number="112" />
+            <coins index="0" number="115" />
         </counters>
     </system>
 </mameconfig>
