--- a/_sources/orionsangel/Cfg/kurikint.cfg
+++ b/_sources/orionsangel/Cfg/kurikint.cfg
@@ -3,10 +3,10 @@
 <mameconfig version="10">
     <system name="kurikint">
         <video>
-            <screen index="0" hstretch="0.812000" vstretch="0.784000" />
+            <screen index="0" hoffset="0.004000" hstretch="0.564000" voffset="-0.038000" vstretch="0.516000" />
         </video>
         <counters>
-            <coins index="0" number="5" />
+            <coins index="0" number="6" />
         </counters>
     </system>
 </mameconfig>
