--- a/_sources/orionsangel/Cfg/psychos.cfg
+++ b/_sources/orionsangel/Cfg/psychos.cfg
@@ -3,14 +3,14 @@
 <mameconfig version="10">
     <system name="psychos">
         <video>
-            <screen index="0" hoffset="0.014000" hstretch="0.850000" vstretch="0.866000" />
+            <screen index="0" hstretch="0.562000" voffset="0.008000" vstretch="0.536000" />
         </video>
         <counters>
-            <coins index="0" number="4" />
+            <coins index="0" number="10" />
         </counters>
         <mixer>
             <channel index="0" newvol="1.996094" />
-            <channel index="1" newvol="2.003906" />
+            <channel index="1" newvol="2.000000" />
         </mixer>
     </system>
 </mameconfig>
