--- a/_sources/orionsangel/Cfg/pacman.cfg
+++ b/_sources/orionsangel/Cfg/pacman.cfg
@@ -3,10 +3,13 @@
 <mameconfig version="10">
     <system name="pacman">
         <video>
-            <screen index="0" hoffset="0.156000" hstretch="0.714000" voffset="0.030000" vstretch="0.736000" />
+            <screen index="0" contrast="1.100000" hoffset="0.158000" hstretch="0.716000" voffset="0.030000" vstretch="0.736000" />
         </video>
         <counters>
-            <coins index="0" number="2" />
+            <coins index="0" number="9" />
         </counters>
+        <mixer>
+            <channel index="0" newvol="1.039063" />
+        </mixer>
     </system>
 </mameconfig>
