--- a/overlays/roms/armorcar.zip.cfg
+++ b/overlays/roms/armorcar.zip.cfg
@@ -1,24 +1,8 @@
-# Config created by Floob
-# https://github.com/biscuits99/rp-video-manager
-# http://www.youtube.com/c/SmartretroCoUk-Gaming
-
-video_shader = "/opt/retropie/configs/all/retroarch/overlay/arcade-realistic/common/shaders/zfast_crt_curve_vertical.glslp"
-video_shader_enable = "true"
+#include "/opt/retropie/configs/all/retroarch/overlay/arcade-realistic/common/vertical.cfg"
 
 input_overlay = /opt/retropie/configs/all/retroarch/overlay/arcade-realistic/armorcar.cfg
-input_overlay_enable = true
-input_overlay_opacity = 1.000000
-input_overlay_scale = 1.000000
 
-custom_viewport_width = "720"
-custom_viewport_height = "876"
-custom_viewport_x = "602"
-custom_viewport_y = "104"
-
-aspect_ratio_index = "22"
-
-video_scale_integer = false
-
-
-video_fullscreen_x = 1920
-video_fullscreen_y = 1080
+custom_viewport_width = "552"
+custom_viewport_height = "782"
+custom_viewport_x = "682"
+custom_viewport_y = "196"
