--- a/overlays/roms/centiped.zip.cfg
+++ b/overlays/roms/centiped.zip.cfg
@@ -1,20 +1,8 @@
-video_shader = "/opt/retropie/configs/all/retroarch/overlay/arcade-realistic/common/shaders/zfast_crt_curve.glslp"
-video_shader_enable = "true"
+#include "/opt/retropie/configs/all/retroarch/overlay/arcade-realistic/common/vertical.cfg"
 
 input_overlay = /opt/retropie/configs/all/retroarch/overlay/arcade-realistic/centiped.cfg
-input_overlay_enable = true
-input_overlay_opacity = 1.000000
-input_overlay_scale = 1.000000
 
-custom_viewport_width = "750"
-custom_viewport_height = "1000"
-custom_viewport_x = "585"
-custom_viewport_y = "40"
-
-aspect_ratio_index = "22"
-
-video_scale_integer = false
-
-
-video_fullscreen_x = 1920
-video_fullscreen_y = 1080
+custom_viewport_width = "538"
+custom_viewport_height = "700"
+custom_viewport_x = "684"
+custom_viewport_y = "194"
