Adds OrionsAngel pack 39

--- a/_sources/orionsangel/Cfg/indytemp.cfg
+++ b/_sources/orionsangel/Cfg/indytemp.cfg
@@ -3,10 +3,10 @@
 <mameconfig version="10">
     <system name="indytemp">
         <video>
-            <screen index="0" hoffset="-0.044000" hstretch="0.620000" voffset="0.010000" vstretch="0.718000" />
+            <screen index="0" hstretch="0.572000" voffset="-0.056000" vstretch="0.530000" />
         </video>
         <counters>
-            <coins index="0" number="6" />
+            <coins index="0" number="11" />
         </counters>
     </system>
 </mameconfig>
