--- a/_sources/orionsangel/Cfg/dspirit.cfg
+++ b/_sources/orionsangel/Cfg/dspirit.cfg
@@ -3,11 +3,11 @@
 <mameconfig version="10">
     <system name="dspirit">
         <video>
-            <screen index="0" hoffset="0.008000" hstretch="0.698000" voffset="0.026000" vstretch="0.738000" />
+            <screen index="0" hstretch="0.698000" voffset="0.016000" vstretch="0.692000" />
         </video>
         <counters>
-            <coins index="0" number="73" />
-            <coins index="1" number="53" />
+            <coins index="0" number="96" />
+            <coins index="1" number="68" />
         </counters>
     </system>
 </mameconfig>
