--- a/_sources/orionsangel/Cfg/marble.cfg
+++ b/_sources/orionsangel/Cfg/marble.cfg
@@ -3,10 +3,10 @@
 <mameconfig version="10">
     <system name="marble">
         <video>
-            <screen index="0" hoffset="-0.008000" hstretch="0.740000" vstretch="0.666000" />
+            <screen index="0" hstretch="0.774000" voffset="0.006000" vstretch="0.692000" />
         </video>
         <counters>
-            <coins index="0" number="12" />
+            <coins index="0" number="18" />
         </counters>
     </system>
 </mameconfig>
