--- a/overlays/roms/futspy.zip.cfg
+++ b/overlays/roms/futspy.zip.cfg
@@ -6,11 +6,10 @@ input_overlay_enable = true
 input_overlay_opacity = 1.000000
 input_overlay_scale = 1.000000
 
-custom_viewport_width = "750"
-custom_viewport_height = "1000"
-custom_viewport_x = "586"
-custom_viewport_y = "50"
-
+custom_viewport_width = 535
+custom_viewport_height = 759
+custom_viewport_x = 699
+custom_viewport_y = 257
 aspect_ratio_index = "23"
 
 video_scale_integer = false
