--- a/overlays/roms/phoenix.zip.cfg
+++ b/overlays/roms/phoenix.zip.cfg
@@ -6,11 +6,10 @@ input_overlay_enable = true
 input_overlay_opacity = 1.000000
 input_overlay_scale = 1.000000
 
-custom_viewport_width = "750"
-custom_viewport_height = "1000"
-custom_viewport_x = "585"
-custom_viewport_y = "50"
-
+custom_viewport_width = 570
+custom_viewport_height = 787
+custom_viewport_x = 662
+custom_viewport_y = 207
 aspect_ratio_index = "23"
 
 video_scale_integer = false
