Fixes a few overlays

--- a/overlays/roms/astdelux.zip.cfg
+++ b/overlays/roms/astdelux.zip.cfg
@@ -6,3 +6,4 @@ custom_viewport_width = 976
 custom_viewport_height = 613
 custom_viewport_y = 121
 custom_viewport_x = 455
+input_overlay_opacity = "0.700000"
