--- a/overlays/roms/bzone.zip.cfg
+++ b/overlays/roms/bzone.zip.cfg
@@ -1,10 +1,10 @@
 #include "/opt/retropie/configs/all/retroarch/overlay/arcade-realistic/common/horizontal.cfg"
 
-custom_viewport_height = 370
-custom_viewport_width = 733
-custom_viewport_x = 609
-custom_viewport_y = 349
+custom_viewport_height = "565"
+custom_viewport_width = "805"
+custom_viewport_x = "573"
+custom_viewport_y = "233"
 input_overlay = /opt/retropie/configs/all/retroarch/overlay/arcade-realistic/bzone.cfg
 input_overlay_hide_in_menu = "true"
-input_overlay_opacity = "1.000000"
+input_overlay_opacity = "0.700000"
 
