--- a/overlays/roms/dotron.zip.cfg
+++ b/overlays/roms/dotron.zip.cfg
@@ -1,9 +1,9 @@
 #include "/opt/retropie/configs/all/retroarch/overlay/arcade-realistic/common/horizontal.cfg"
 
-custom_viewport_height = 716
-custom_viewport_width = 956
-custom_viewport_x = 479
-custom_viewport_y = 190
+custom_viewport_height = "545"
+custom_viewport_width = "714"
+custom_viewport_x = "613"
+custom_viewport_y = "360"
 input_overlay = /opt/retropie/configs/all/retroarch/overlay/arcade-realistic/dotron.cfg
 input_overlay_opacity = "1.000000"
 
