Adds latest OrionsAngel overlays

--- a/overlays/configs/ddsom.cfg
+++ b/overlays/configs/ddsom.cfg
@@ -8,7 +8,7 @@ overlay0_full_screen = true
 overlay0_descs = 0
 
 
-#This Realistic Arcade Overlay was made by: OrionsAngel
+This Realistic Arcade Overlay was made by: OrionsAngel
 
 
 Credit for the bezel goes to: Thechonv2
