--- a/overlays/configs/pac40.cfg
+++ b/overlays/configs/pac40.cfg
@@ -1,6 +1,6 @@
 overlays = 1
 
-overlay0_overlay = yiear.png
+overlay0_overlay = pac40.png
 
 
 overlay0_full_screen = true
@@ -11,4 +11,4 @@ overlay0_descs = 0
 This Realistic Arcade Overlay was made by: OrionsAngel
 
 
-Bezel Artwork was restored by: ArsInvictus
+
