--- a/overlays/configs/prehisle.cfg
+++ b/overlays/configs/prehisle.cfg
@@ -1,4 +1,15 @@
 overlays = 1
+
 overlay0_overlay = prehisle.png
+
+
 overlay0_full_screen = true
+
 overlay0_descs = 0
+
+
+This Realistic Arcade Overlay was made by: OrionsAngel
+
+
+Credit for the restored bezel goes to: ArsInvictus
+
