--- a/overlays/roms/ibara.zip.cfg
+++ b/overlays/roms/ibara.zip.cfg
@@ -1,8 +1,8 @@
 #include "/opt/retropie/configs/all/retroarch/overlay/arcade-realistic/common/vertical.cfg"
 
-input_overlay = /opt/retropie/configs/all/retroarch/overlay/arcade-realistic/Sega_Astro_City_Vertical.cfg
-
-custom_viewport_width = 590
-custom_viewport_height = 727
-custom_viewport_y = 268
-custom_viewport_x = 622
+custom_viewport_height = 765
+custom_viewport_width = 610
+custom_viewport_x = 634
+custom_viewport_y = 175
+input_overlay = /opt/retropie/configs/all/retroarch/overlay/arcade-realistic/ibara.cfg
+input_overlay_opacity = "1.000000"
